--- a/src/App.css
+++ b/src/App.css
@@ -27,64 +27,68 @@
 .App-link {
   color: #61dafb;
 }
-/*#top{
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin:25px;
-}
-#profile{
-  display:flex;
-  flex-direction: row;
-  margin:25px;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-#work-experience{
-  display:flex;
-  flex-direction: row;
-  margin:25px;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-#key-skills {
-  display: flex;
-  flex-direction: row;
-  margin: 25px;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-#education{
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  margin: 25px;
-  align-items: flex-start;
-}
-.horizontal {
-  background-color: black;
-  margin:25px;
-  line-height: 1px;
-}
-.jobs{
-  flex-direction: column;
-}
-.university{
-  flex-direction: column;
-  padding-left: 20px;
-}
 .large-text{
   font-size: 20px;
   line-height: normal;
 }
+.head{
+  display:flex;
+  flex-direction: row;
+  margin:25px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.hr-1{
+  background-color: gold;
+  border-width: 0;
+  height:5px;
+}
+/*
+#profile{
+}
+#work-experience{
+    display:flex;
+    flex-direction: row;
+    gap: 10px;
+    margin:25px;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+#key-skills {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    margin: 25px;
+    align-items: flex-start;
+}
+#education{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin: 25px;
+    align-items: flex-start;
+}
+.horizontal {
+    background-color: black;
+    margin:25px;
+    line-height: 1px;
+}
+.jobs{
+    flex-direction: column;
+}
+.university{
+    flex-direction: column;
+    padding-left: 20px;
+}
+
 h1{
-  line-height: 1;
+    line-height: 1;
 }
 p{
-  line-height: 0.5;
+    line-height: 0.5;
 }
 ul{
-  list-style-type: none;
+    list-style-type: none;
 }*/
 @keyframes App-logo-spin {
   from {
